# PROTzilla2

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
protzilla/: disk_operator.py  run.py  run_v2.py  runner.py  steps.py
protzilla/constants/: colors.py  paths.py  text.py
protzilla/customising/: accessibility.py
protzilla/data_analysis/: differential_expression.py  differential_expression_anova.py  differential_expression_helper.py  differential_expression_kruskal_wallis.py  differential_expression_mann_whitney.py  model_evaluation_plots.py  plots.py  plots_helper.py  power_analysis.py  power_analysis_validation.py  predict_spectra.py  prot_quant_plot_peptide.py  ptm_analysis.py  ptm_quantification.py  spectrum_prediction.py  spectrum_prediction_utils.py  time_quant_plot_peptide.py  time_series_helper.py  time_series_plot_peptide.py  time_series_regression_analysis.py
protzilla/data_integration/: database_integration.py  database_query.py  di_plots.py  enrichment_analysis.py
protzilla/data_preprocessing/: filter_proteins.py  normalisation.py  outlier_detection.py  peptide_filter.py  plots.py  plots_helper.py  transformation.py
protzilla/importing/: metadata_import.py  ms_data_import.py  peptide_import.py
protzilla/methods/: customising.py  data_analysis.py  data_integration.py  data_preprocessing.py  importing.py
protzilla/utilities/: plot_template.py  transform_dfs.py  utilities.py
tests/: conftest.py
tests/protzilla/: test_runner.py
ui/runs/: form_mapping.py  urls.py  views.py
user_data/workflows/: spectrum-prediction.yaml  (+5 more)
(+37 files in other folders)
