# TODO: would need some refactoring
[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "PROTzilla"
version = "0.1.0"
authors = [{name = "John Doe", email = "john@doe.com"}]
dependencies = [
    "biomart==0.9.2",
    "biopython==1.81",
    "dash==2.9.2",
    "dash-bio==1.0.2",
    "isort==5.12.0",
    "gseapy==1.0.5",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "plotly==5.13.0",
    "restring==0.1.20",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "statsmodels==0.13.5",
    "umap-learn==0.5.3",
    "Werkzeug==2.2.3",
    "numba==0.57.0",
    "Pillow==9.5.0",
    "kaleido==0.2.1",
    "requests==2.31.0",
    "psutil==5.9.5",
    "tqdm==4.65.0",
    "protgraph @ git+https://github.com/antonneubauer/ProtGraph@master",
    "joblib==1.2.0",
    "networkx==3.1",
    "beautifulsoup4==4.12.2",
    "openpyxl==3.1.2",
]

[project.optional-dependencies]
dev = [  # TODO: maybe split
    "autoflake==2.0.1",
    "black==23.1.0",
    "coverage==7.2.1",
    "Django==4.1.7",
    "pre-commit==3.1.0",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "pytest-dependency==0.5.1",
    "pytest-django==4.5.2",
    "pytest-order==1.1.0",
    "sphinx==7.2.6",
    "sphinx-autoapi==3.0.0",
]

[tool.setuptools]
packages = ['protzilla']
